--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,3 +15,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1 {
+  margin-bottom: 20px;
+  font-weight: bold;
+  font-size:xx-large;
+}
