--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,11 +19,24 @@ code {
 h1 {
   margin-bottom: 15px;
   font-weight: bold;
-  font-size:xx-large;
+  font-size: xx-large;
 }
 
 h2 {
   margin-bottom: 15px;
   font-weight: bold;
-  font-size:x-large;
+  font-size: x-large;
+}
+
+.cropped-image {
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+}
+
+.cropped-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
